# WormTrack

./: .gitignore  BgNormal.m  BgThresh.m  DataRepresente.py  LabTop_Servier_Communication.txt  LocateWormBodyMiddle.m  LocateWormCentre.m  NextFrameNearestPoint.m  README.md  README_Matlab  RemoveBigArea.m  SingleImageProcessing.m  StatiscticsDisplay.py  StatisticsRepresent.py  StatisticsRepresent2.py  Test.m  Todo.md  dist_move.ipynb  distplot.py  fluoplot.py  local.txt  main.m  main_imgeprocessing.m  par_test.py  partical_tracking.ipynb  plt.py  prime.txt  sphere.tif  tiff2avi.sh  tracking.py  tracking_par.py  trackingroi.py  wormtracker.py
UnitsTest/: C.elegans_235855_0000_contrast.tif  GPU_Test_ContrastAdjusted.m  TestNext.m  Test_ContrastAdjusted.m  test.tif
cpp/: CMakeCache.txt  CMakeLists.txt  Makefile  README  cmake_install.cmake  roi_dog.tif  wormtracker
cpp/src/: .CMakeLists.txt.swp  .nfs000000000039fc1a00000007  imread.cpp  main.h  note.md  tracking.cpp
results/: locations_0819.txt
src_cpp/: CMakeLists.txt  main.cpp
test_image/: 3_hela_LC3_sc1_ct_G0.6_R4_01_ch00.tif
track_ref/: data_load.py  roi.py  tracking20190214_intensity_mask.py  tracking_2.7.py  tracking_20190303.py  tracking_dog.py
tracklib/: .wormtracker.py.swp  img_buffer.py  wormtracker.py
