cmake_minimum_required(VERSION 2.8)

# Executable name
project( wormtracker )

find_package( OpenCV REQUIRED )
find_package(OpenMP REQUIRED)
if(OPENMP_FOUND)
  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
  set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif(OPENMP_FOUND)

include_directories( ${OpenCV_INCLUDE_DIRS} )

add_executable( wormtracker src/tracking.cpp )

target_link_libraries( wormtracker ${OpenCV_LIBS} ${MPI_LIBRARIES} )
